--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,35 @@
 <div class="container">
-  <div class="col">
+  <div class="col" style="text-align: center;">
     <h1>{{title}}</h1>
   </div>
   <br><br>
   <form action="" class="form-group row">
     <div class="form-group col-md 3">
       <label for="name">Name: </label>
-      <input type="text" name="name" id="name" placeholder="name" class="form-control" [(ngModel)]="cuadroName">
+      <input type="text" name="name" id="name" placeholder="name" class="form-control" [(ngModel)]="nameBox">
     </div>
     <div class="form-group col-md 3">
-      <label for="surname">Name: </label>
-      <input type="text" name="name" id="name" placeholder="name" class="form-control" [(ngModel)]="cuadroName">
+      <label for="surname">Surname: </label>
+      <input type="text" name="surname" id="surname" placeholder="surname" class="form-control" [(ngModel)]="surnameBox">
     </div>
     <div class="form-group col-md 3">
-      <label for="name">Name: </label>
-      <input type="text" name="name" id="name" placeholder="name" class="form-control" [(ngModel)]="cuadroName">
+      <label for="name">Position: </label>
+      <input type="text" name="position" id="position" placeholder="position" class="form-control" [(ngModel)]="positionBox">
     </div>
     <div class="form-group col-md 3">
-      <label for="name">Name: </label>
-      <input type="text" name="name" id="name" placeholder="name" class="form-control" [(ngModel)]="cuadroName">
+      <label for="name">Salary: </label>
+      <input type="text" name="salary" id="salary" placeholder="salary" class="form-control" [(ngModel)]="salaryBox">
     </div>
 
   </form>
+  <br>
+  <div class="col">
+    <button type="submit" class="btn btn-primary" (click)="addEmployee()">Add Employee</button>
+  </div>
+
 </div>
 
+<br><br><br>
 <div class="container">
   <div class="row">
     <div class="col">
@@ -31,7 +37,6 @@
         {{i + 1}} : {{employee.name}} {{employee.surname}} {{employee.position}} {{employee.salary}}
 
       </div>
-      <button (click)="addEmployee()">Add Employee</button>
     </div>
   </div>
 </div>
