--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,13 +30,4 @@
 </div>
 
 <br><br><br>
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <div *ngFor="let employee of employees; let i=index">
-        {{i + 1}} : {{employee.name}} {{employee.surname}} {{employee.position}} {{employee.salary}}
-
-      </div>
-    </div>
-  </div>
-</div>
+<app-employee-child *ngFor="let employee of employees; let i=index" [employeeInChild]="employee" [employeeIndex]="i"></app-employee-child>
