--- a/src/app/characteristics-employee/characteristics-employee.component.html
+++ b/src/app/characteristics-employee/characteristics-employee.component.html
@@ -1,3 +1,3 @@
 <label for="item-input">Characteristics</label>
 <input type="text" id="item-input" #newChar>
-<button type="button" class="btn btn-secondary" (click)="addCharacteristic(newChar.value)">Add characteristic</button>
+<button type="button" class="btn btn-secondary" (click)="addChildItem(newChar.value)">Add characteristic</button>
