--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -1,1 +1,33 @@
-<p>home-component works!</p>
+<div class="container">
+    <div class="col" style="text-align: center;">
+      <h1>{{title}}</h1>
+    </div>
+    <br><br>
+    <form action="" class="form-group row">
+      <div class="form-group col-md 3">
+        <label for="name">Name: </label>
+        <input type="text" name="name" id="name" placeholder="name" class="form-control" [(ngModel)]="nameBox">
+      </div>
+      <div class="form-group col-md 3">
+        <label for="surname">Surname: </label>
+        <input type="text" name="surname" id="surname" placeholder="surname" class="form-control" [(ngModel)]="surnameBox">
+      </div>
+      <div class="form-group col-md 3">
+        <label for="name">Position: </label>
+        <input type="text" name="position" id="position" placeholder="position" class="form-control" [(ngModel)]="positionBox">
+      </div>
+      <div class="form-group col-md 3">
+        <label for="name">Salary: </label>
+        <input type="text" name="salary" id="salary" placeholder="salary" class="form-control" [(ngModel)]="salaryBox">
+      </div>
+  
+    </form>
+    <br>
+    <div class="col">
+      <button type="submit" class="btn btn-primary" (click)="addEmployee()">Add Employee</button>
+    </div>
+  
+  </div>
+  
+  <br><br><br>
+  <app-employee-child *ngFor="let employee of employees; let i=index" [employeeInChild]="employee" [employeeIndex]="i"></app-employee-child>
